# schani_library

./: .env.example  .env.testing  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
migrations/2017-12-11-154832_create_images_table/: down.sql  up.sql
migrations/2018-01-09-151303_add_image_sidecar_id/: down.sql  up.sql
src/: lib.rs  main.rs
src/database/: schema.rs
src/models/: mod.rs
src/service/: imageservice.rs  mod.rs
src/web/: extractors.rs  handlers.rs  middlewares.rs  mod.rs  router.rs  webservice.rs
