[package]
name = "schani_library"
version = "0.1.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
diesel = { version = "1.0.0-beta1", features = ["postgres"] }
diesel_infer_schema = { version = "1.0.0-beta1", features = ["postgres"] }
dotenv = "0.11.0"
fern = "*"
futures = "*"
gotham = { git = "https://github.com/gotham-rs/gotham.git", branch = "router-builder" }
gotham_derive = { git = "https://github.com/gotham-rs/gotham.git", branch = "router-builder" }
gotham_middleware_diesel = { git = "https://github.com/ChristophWurst/gotham-middleware-diesel.git", branch = "schani_library" }
hyper = "^0.11"
log = "*"
mime = "*"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
